# tabletsettings

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build
data/: com.github.avargas05.tabletsettings.appdata.xml.in  com.github.avargas05.tabletsettings.desktop.in  com.github.avargas05.tabletsettings.gschema.xml  meson.build
data/icons/: meson.build
icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs  main.rs  meson.build  structs.rs  tablet.rs  tabletsettings.gresource.xml  window.rs  window.ui
